--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,4 @@ test = 'pytest -s -x --cov=fast_zero_async -vv'
 pre_format = 'ruff check --fix'
 pre_test = 'task lint'
 post_test = 'coverage html'
+run_ip ='fastapi dev fast_zero_async/app.py --host 192.168.1.66'
