--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,3 +52,4 @@ pre_format = 'ruff check --fix'
 pre_test = 'task lint'
 post_test = 'coverage html'
 run_ip ='fastapi dev fast_zero_async/app.py --host 192.168.1.66'
+uvicorn = 'uvicorn fast_zero_async.app:app --reload --port 8001'
