--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 DATABASE_URL="sqlite:///database.db"
+
+#SECRET_KEY="c>Z)4I&^fER1rG:"
+
+#ACCESS_TOKEN_EXPIRE_MINUTES=int(240)
+
+#ALGORITHM = 'HS256'
