refatoremos o codigo - utilizacao de routers para user e auth - refatoracao dos tests - configuramos a settings - configuramos uma fixture para settings - melhoramento com ANNOTED e QUERY

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL="sqlite:///database.db"
 
-#SECRET_KEY="c>Z)4I&^fER1rG:"
+SECRET_KEY="c>Z)4I&^fER1rG:"
 
-#ACCESS_TOKEN_EXPIRE_MINUTES=int(240)
+ACCESS_TOKEN_EXPIRE_MINUTES=240
 
-#ALGORITHM = 'HS256'
+ALGORITHM='HS256'
