--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ readme = "README.md"
 requires-python = ">=3.14, <4.0"
 dependencies = [
     "fastapi[standard] (>=0.123.8,<0.124.0)",
-    "sqlalchemy (>=2.0.44,<3.0.0)",
+    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
     "pwdlib[argon2] (>=0.3.0,<0.4.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
-    "tzdata (>=2025.2,<2026.0)"
+    "tzdata (>=2025.2,<2026.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
 
 
@@ -27,7 +28,8 @@ dev = [
     "ruff (>=0.14.8,<0.15.0)",
     "pytest (>=9.0.1,<10.0.0)",
     "pytest-cov (>=7.0.0,<8.0.0)",
-    "taskipy (>=1.14.1,<2.0.0)"
+    "taskipy (>=1.14.1,<2.0.0)",
+    "pytest-asyncio (>=1.3.0,<2.0.0)"
 ]
 
 [tool.ruff]
@@ -45,6 +47,8 @@ quote-style = 'single'
 [tool.pytest.ini_options]
 pythonpath = "."
 addopts = '-p no:warnings ' # to ignore warnings during test runsc
+asyncio_default_fixture_loop_scope = 'function'
+
 
 [tool.taskipy.tasks]
 lint = "ruff check ."
@@ -56,3 +60,6 @@ pre_test = 'task lint'
 post_test = 'coverage html'
 run_ip ='fastapi dev fast_zero_async/app.py --host 192.168.1.66'
 uvicorn = 'uvicorn fast_zero_async.app:app --reload --port 8001'
+
+[tool.coverage.run]
+concurrency = ["thread", "greenlet"]
