--- a/.env
+++ b/.env
@@ -1,7 +1,25 @@
-DATABASE_URL="sqlite+aiosqlite:///database.db"
+#DATABASE_URL="sqlite+aiosqlite:///database.db"
+#DATABASE_URL="postgresql+psycopg://app_user:app_password@127.0.0.1:5432/app_fast_api_zero"
+#DATABASE_URL=postgresql+asyncpg://fastzero_database:fastzero_password@127.0.0.1:5432/fastzero_db
 
 SECRET_KEY="c>Z)4I&^fER1rG:"
 
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-ALGORITHM='HS256'
+ALGORITHM=HS256
+
+POSTGRES_USER=fastzero_user
+POSTGRES_PASSWORD=fastzero_password
+POSTGRES_DB=fastzero_db
+
+DATABASE_URL=postgresql+asyncpg://fastzero_user:fastzero_password@app_db:5432/fastzero_db
+TEST_DATABASE_URL=postgresql+asyncpg://fastzero_user:fastzero_password@test_db:5432/fastzero_test_db
+
+
+PGADMIN_EMAIL=pgadmin@example.com
+PGADMIN_PASSWORD=Cfrg!7239
+
+POSTGRES_TEST_DB=fastzero_test_db
+POSTGRES_USER_TEST=fastzero_user
+POSTGRES_PASSWORD_TEST=fastzero_password
+
