--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = [
     {name = "ClaudioFritzen",email = "sdfritzen96@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.14, <4.0"
+requires-python = ">=3.11, <3.15"
+
 dependencies = [
     "fastapi[standard] (>=0.123.8,<0.124.0)",
     "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
@@ -15,7 +16,7 @@ dependencies = [
     "pwdlib[argon2] (>=0.3.0,<0.4.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "tzdata (>=2025.2,<2026.0)",
-    "aiosqlite (>=0.21.0,<0.22.0)"
+    "asyncpg (>=0.31.0,<0.32.0)"
 ]
 
 
@@ -31,7 +32,8 @@ dev = [
     "taskipy (>=1.14.1,<2.0.0)",
     "pytest-asyncio (>=1.3.0,<2.0.0)",
     "factory-boy (>=3.3.3,<4.0.0)",
-    "freezegun (>=1.5.5,<2.0.0)"
+    "freezegun (>=1.5.5,<2.0.0)",
+    "testcontainers (>=4.13.3,<5.0.0)",
 ]
 
 [tool.ruff]
@@ -65,3 +67,6 @@ uvicorn = 'uvicorn fast_zero_async.app:app --reload --port 8001'
 
 [tool.coverage.run]
 concurrency = ["thread", "greenlet"]
+
+[tool.poetry.group.test.dependencies]
+psycopg2-binary = "^2.9"
