--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,8 +62,17 @@ services:
     depends_on:
       #- db_prod
       - db_tests
+    
+  redis: 
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
 
 volumes:
   postgres_prod_data:
   postgres_test_data:
   pgadmin_data:
+  redis_data:
