--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "pwdlib[argon2] (>=0.3.0,<0.4.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "tzdata (>=2025.2,<2026.0)",
-    "asyncpg (>=0.31.0,<0.32.0)"
+    "asyncpg (>=0.31.0,<0.32.0)",
+    "redis (>=7.1.0,<8.0.0)",
+    "fakeredis (>=2.33.0,<3.0.0)"
 ]
 
 
