--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dev = [
     "factory-boy (>=3.3.3,<4.0.0)",
     "freezegun (>=1.5.5,<2.0.0)",
     "testcontainers (>=4.13.3,<5.0.0)",
+    "pytest-env (>=1.3.2,<2.0.0)",
 ]
 
 [tool.ruff]
